--- a/zad02.css
+++ b/zad02.css
@@ -1,3 +1,105 @@
-body{
-    background-color: aqua;
+body {
+    margin: 0px;
+}
+
+nav {
+    background: #172349;
+    text-transform: uppercase;
+    height: 70px;
+}
+
+nav ul {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: center;
+    gap: 3rem;
+    padding-left: 10%;
+    padding-right: 10%;
+    margin: 0;
+    height: 100%;
+
+}
+
+nav ul li {
+    display: inline-block;
+}
+
+nav ul li a {
+    color: #ffffff;
+    font-weight: 800;
+    cursor: pointer;
+
+}
+
+nav ul li a:hover {
+    color: #bbbbbb;
+    transition: all 0.5s;
+}
+
+footer {
+    background: #fff;
+    text-align: center;
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    margin-left: 15%;
+    margin-right: 15%;
+    color: #aaa;
+    font-size: large;
+    border-top: #dedede solid 3px;
+    width: 70%;
+}
+
+.mainContainer {
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+    gap: 5rem;
+    margin-left: 15%;
+    margin-right: 15%;
+    border-radius: 10px;
+    box-shadow: 0 2px 25px rgba(0, 0, 0, 0.2);
+    padding: 2rem;
+    margin-top: 2rem;
+    margin-bottom: 2rem;
+}
+
+.titleContainer {
+    display: flex;
+    justify-content: space-evenly;
+    flex-direction: column;
+    gap: 0.5rem;
+    align-self: center;
+}
+
+.titleContainer h1 {
+    margin: 0.2rem;
+    color: #642121;
+}
+
+.titleContainer h3 {
+    margin: 0.2rem;
+    align-self: center;
+}
+
+.infoContainer {
+    display: flex;
+    justify-content: space-evenly;
+    gap: 10rem;
+}
+
+.logo {
+    width: 100%;
+    height: 100%;
+    max-width: 250px;
+    max-height: 250px;
+    height: auto;
+}
+
+.squad {
+    width: 100%;
+    height: 100%;
+    max-width: 400px;
+    max-height: 250px;
+    height: auto;
 }
